objects/ASI_MFM_Settings__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_P_Type__c</fullName>
        <label>A&amp;P Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Sent_Time__c</fullName>
        <label>Email Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_10_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_10_POAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_10_PORAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POR Amount Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_10_PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_11_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_11_POAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_11_PORAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POR Amount May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_11_PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_12_Cost__c</fullName>
        <label>Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_12_POAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_12_PORAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POR Amount Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_12_PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POAmount_YTD_10__c</fullName>
        <formula>ASI_MFM_Month_1_POAmount__c + ASI_MFM_Month_2_POAmount__c+ASI_MFM_Month_3_POAmount__c+ASI_MFM_Month_4_POAmount__c+ASI_MFM_Month_5_POAmount__c + ASI_MFM_Month_6_POAmount__c+ASI_MFM_Month_7_POAmount__c+ASI_MFM_Month_8_POAmount__c+ASI_MFM_Month_9_POAmount__c + ASI_MFM_Month_10_POAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Amount YTD Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POAmount_YTD_11__c</fullName>
        <formula>ASI_MFM_Month_1_POAmount__c + ASI_MFM_Month_2_POAmount__c+ASI_MFM_Month_3_POAmount__c+ASI_MFM_Month_4_POAmount__c+ASI_MFM_Month_5_POAmount__c + ASI_MFM_Month_6_POAmount__c+ASI_MFM_Month_7_POAmount__c+ASI_MFM_Month_8_POAmount__c+ASI_MFM_Month_9_POAmount__c + ASI_MFM_Month_10_POAmount__c+ASI_MFM_Month_11_POAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Amount YTD May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POAmount_YTD_12__c</fullName>
        <formula>ASI_MFM_Month_1_POAmount__c + ASI_MFM_Month_2_POAmount__c+ASI_MFM_Month_3_POAmount__c+ASI_MFM_Month_4_POAmount__c+ASI_MFM_Month_5_POAmount__c + ASI_MFM_Month_6_POAmount__c+ASI_MFM_Month_7_POAmount__c+ASI_MFM_Month_8_POAmount__c+ASI_MFM_Month_9_POAmount__c + ASI_MFM_Month_10_POAmount__c+ASI_MFM_Month_11_POAmount__c+ASI_MFM_Month_12_POAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Amount YTD Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PORAmount_M1YTD_10__c</fullName>
        <formula>ASI_MFM_Month_1_PORAmount__c + ASI_MFM_Month_2_PORAmount__c+ASI_MFM_Month_3_PORAmount__c+ASI_MFM_Month_4_PORAmount__c+ASI_MFM_Month_5_PORAmount__c + ASI_MFM_Month_6_PORAmount__c+ASI_MFM_Month_7_PORAmount__c+ASI_MFM_Month_8_PORAmount__c+ASI_MFM_Month_9_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POR Amount M-1YTD Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PORAmount_M1YTD_11__c</fullName>
        <formula>ASI_MFM_Month_1_PORAmount__c + ASI_MFM_Month_2_PORAmount__c+ASI_MFM_Month_3_PORAmount__c+ASI_MFM_Month_4_PORAmount__c+ASI_MFM_Month_5_PORAmount__c + ASI_MFM_Month_6_PORAmount__c+ASI_MFM_Month_7_PORAmount__c+ASI_MFM_Month_8_PORAmount__c+ASI_MFM_Month_9_PORAmount__c + ASI_MFM_Month_10_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POR Amount M-1YTD May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PORAmount_M1YTD_12__c</fullName>
        <formula>ASI_MFM_Month_1_PORAmount__c + ASI_MFM_Month_2_PORAmount__c+ASI_MFM_Month_3_PORAmount__c+ASI_MFM_Month_4_PORAmount__c+ASI_MFM_Month_5_PORAmount__c + ASI_MFM_Month_6_PORAmount__c+ASI_MFM_Month_7_PORAmount__c+ASI_MFM_Month_8_PORAmount__c+ASI_MFM_Month_9_PORAmount__c + ASI_MFM_Month_10_PORAmount__c+ASI_MFM_Month_11_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POR Amount M-1YTD Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Balance_POR_10__c</fullName>
        <description>PO Balance vs POR (F)=PO Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_POAmount_YTD_10__c - ASI_MFM_PORAmount_M1YTD_10__c - ASI_MFM_Month_10_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Balance Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Balance_POR_11__c</fullName>
        <description>PO Balance vs POR (F)=PO Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_POAmount_YTD_11__c - ASI_MFM_PORAmount_M1YTD_11__c - ASI_MFM_Month_11_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Balance May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Balance_POR_12__c</fullName>
        <description>PO Balance vs POR (F)=PO Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_POAmount_YTD_12__c - ASI_MFM_PORAmount_M1YTD_12__c - ASI_MFM_Month_12_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Balance Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_ID__c</fullName>
        <label>PO Line ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Amount_M_1YTD__c</fullName>
        <label>PO Receipt Amount(M-1YTD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Amount_YTD__c</fullName>
        <label>PO Receipt Amount(YTD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Line__c</fullName>
        <label>PO Receipt Line ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PRPO_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR/PO Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PaymentAmount_YTD_10__c</fullName>
        <formula>ASI_MFM_Month_1_PaymentAmount__c+ASI_MFM_Month_2_PaymentAmount__c+ASI_MFM_Month_3_PaymentAmount__c+ASI_MFM_Month_4_PaymentAmount__c+ASI_MFM_Month_5_PaymentAmount__c+ASI_MFM_Month_6_PaymentAmount__c+ASI_MFM_Month_7_PaymentAmount__c+ASI_MFM_Month_8_PaymentAmount__c+ASI_MFM_Month_9_PaymentAmount__c+ASI_MFM_Month_10_PaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount YTD Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PaymentAmount_YTD_11__c</fullName>
        <formula>ASI_MFM_Month_1_PaymentAmount__c+ASI_MFM_Month_2_PaymentAmount__c+ASI_MFM_Month_3_PaymentAmount__c+ASI_MFM_Month_4_PaymentAmount__c+ASI_MFM_Month_5_PaymentAmount__c+ASI_MFM_Month_6_PaymentAmount__c+ASI_MFM_Month_7_PaymentAmount__c+ASI_MFM_Month_8_PaymentAmount__c+ASI_MFM_Month_9_PaymentAmount__c+ASI_MFM_Month_10_PaymentAmount__c+ASI_MFM_Month_11_PaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount YTD May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PaymentAmount_YTD_12__c</fullName>
        <formula>ASI_MFM_Month_1_PaymentAmount__c+ASI_MFM_Month_2_PaymentAmount__c+ASI_MFM_Month_3_PaymentAmount__c+ASI_MFM_Month_4_PaymentAmount__c+ASI_MFM_Month_5_PaymentAmount__c+ASI_MFM_Month_6_PaymentAmount__c+ASI_MFM_Month_7_PaymentAmount__c+ASI_MFM_Month_8_PaymentAmount__c+ASI_MFM_Month_9_PaymentAmount__c+ASI_MFM_Month_10_PaymentAmount__c+ASI_MFM_Month_11_PaymentAmount__c+ASI_MFM_Month_12_PaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount YTD Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_ID__c</fullName>
        <label>Payment Line ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanAmount_YTD_10__c</fullName>
        <formula>ASI_MFM_Month_1_Cost__c + ASI_MFM_Month_2_Cost__c + ASI_MFM_Month_3_Cost__c + ASI_MFM_Month_4_Cost__c+ASI_MFM_Month_5_Cost__c+ASI_MFM_Month_6_Cost__c+ASI_MFM_Month_7_Cost__c+ASI_MFM_Month_8_Cost__c+ASI_MFM_Month_9_Cost__c+ASI_MFM_Month_10_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Amount YTD Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanAmount_YTD_11__c</fullName>
        <formula>ASI_MFM_Month_1_Cost__c + ASI_MFM_Month_2_Cost__c + ASI_MFM_Month_3_Cost__c + ASI_MFM_Month_4_Cost__c+ASI_MFM_Month_5_Cost__c+ASI_MFM_Month_6_Cost__c+ASI_MFM_Month_7_Cost__c+ASI_MFM_Month_8_Cost__c+ASI_MFM_Month_9_Cost__c+ASI_MFM_Month_10_Cost__c+ASI_MFM_Month_11_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Amount YTD May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanAmount_YTD_12__c</fullName>
        <formula>ASI_MFM_Month_1_Cost__c + ASI_MFM_Month_2_Cost__c + ASI_MFM_Month_3_Cost__c + ASI_MFM_Month_4_Cost__c+ASI_MFM_Month_5_Cost__c+ASI_MFM_Month_6_Cost__c+ASI_MFM_Month_7_Cost__c+ASI_MFM_Month_8_Cost__c+ASI_MFM_Month_9_Cost__c+ASI_MFM_Month_10_Cost__c+ASI_MFM_Month_11_Cost__c+ASI_MFM_Month_12_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Amount YTD Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Amount__c</fullName>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Balance_POR_10__c</fullName>
        <description>Plan Balance vs POR (E)=Plan Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_PlanAmount_YTD_10__c - ASI_MFM_PORAmount_M1YTD_10__c - ASI_MFM_Month_10_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Balance Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Balance_POR_11__c</fullName>
        <description>Plan Balance vs POR (E)=Plan Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_PlanAmount_YTD_11__c - ASI_MFM_PORAmount_M1YTD_11__c - ASI_MFM_Month_11_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Balance May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Balance_POR_12__c</fullName>
        <description>Plan Balance vs POR (E)=Plan Amount (YTD)-PO Receipt Amount (M-1 YTD)- PO Receipt (MTD)</description>
        <formula>ASI_MFM_PlanAmount_YTD_12__c - ASI_MFM_PORAmount_M1YTD_12__c - ASI_MFM_Month_12_PORAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Balance Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_ID__c</fullName>
        <label>Plan Line ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipName>PO_Receipt_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>PO_Receipt_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TW_Accrual_PO_Generation_Day__c</fullName>
        <label>Accrual PO Generation Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TW_Post_G_L_Date__c</fullName>
        <label>Post G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TW_Today__c</fullName>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Version1</fullName>
                </value>
                <value>
                    <fullName>Version2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI MFM Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_76116006</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Plan__c</field>
            <operation>equals</operation>
            <value>76116006</value>
        </filters>
        <label>All_76116006</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L{00000000}</displayFormat>
        <label>Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Settings</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_PO_Receipt_Closing</fullName>
        <active>true</active>
        <label>KR MFM PO Receipt Closing</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Setup</fullName>
        <active>true</active>
        <label>ASI MFM KR Setup</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Setting</fullName>
        <active>true</active>
        <label>ASI MFM TW Setting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>